--- a/.gitignore/.gitignore
+++ b/.gitignore/.gitignore
@@ -1,16 +1,33 @@
-#Simulacija standartnog Wienerovog procesa
-#radi uporedjenja rezultata
-set.seed(123)
-W = c()
-#W(0)=0 iz definicije 
-W[1]=0
-t = seq(0,365,1)
-#Glavni deo
-for(i in 1:365)
-{
-  #Iskoristacava se nezavisnost i normalna raspodela prirastaja
-  W[i+1]=W[i]+rnorm(1)
-}
-plot(t,W, type="l", main="Primer simulacije standartnog Wienerovog procesa", xlab = "vreme", ylab = "W(t)", col="red")
-abline(v=0, col="black",lty="dashed")
-abline(v=100, col="blue", lty="dashed")
+# History files
+.Rhistory
+.Rapp.history
+
+# Session Data files
+.RData
+
+# Example code in package build process
+*-Ex.R
+
+# Output files from R CMD build
+/*.tar.gz
+
+# Output files from R CMD check
+/*.Rcheck/
+
+# RStudio files
+.Rproj.user/
+
+# produced vignettes
+vignettes/*.html
+vignettes/*.pdf
+
+# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
+.httr-oauth
+
+# knitr and R markdown default cache directories
+/*_cache/
+/cache/
+
+# Temporary files created by R markdown
+*.utf8.md
+*.knit.md
